--- a/cloudflared/cloudflared.yaml
+++ b/cloudflared/cloudflared.yaml
@@ -20,6 +20,8 @@ spec:
             - tunnel
             - --config
             - /etc/cloudflared/config/config.yaml
+            - --metrics
+            - 0.0.0.0:3001
             - run
           livenessProbe:
             httpGet:
