--- a/prometheus/configmap.yaml
+++ b/prometheus/configmap.yaml
@@ -88,6 +88,14 @@ data:
           - /etc/config/rules
           - /etc/config/alerts
         scrape_configs:
+          - job_name: cloudflared_legacy
+            static_configs:
+            - targets:
+                - 192.168.1.22:3001
+          - job_name: traefik_legacy
+            static_configs:
+            - targets:
+                - 192.168.1.13:8082
           - job_name: prometheus
             static_configs:
               - targets:
