--- a/cloudflared/service.yaml
+++ b/cloudflared/service.yaml
@@ -7,8 +7,8 @@ spec:
   selector:
     app: cloudflared
   ports:
-  - name: cloudflared-service
-    port: 80
+  - port: 80
+    name: cloudflared-monitor
     targetPort: 2000
 ---
 
