--- a/bots/deployment.yaml
+++ b/bots/deployment.yaml
@@ -7,7 +7,7 @@ spec:
   selector:
     matchLabels:
       app: twitch-bot
-  replicas: 0
+  replicas: 1
   template:
     metadata:
       labels:
@@ -30,4 +30,7 @@ spec:
             secretKeyRef:
                 name: twitch-bot-secrets
                 key: DOPPLER_TOKEN 
+        ports:
+          - name: http
+            containerPort: 3000
       restartPolicy: Always
