--- a/cloudflared/configmap.yaml
+++ b/cloudflared/configmap.yaml
@@ -26,7 +26,7 @@ data:
       service: http://umami-svc.umami
     - hostname: kibana.mvaldes.dev
       service: https://kibana-kb-http.elastic:5601
-    - hostname: bot.mvaldes.dev
+    - hostname: bots.mvaldes.dev
       service: https://twitch-svc.bot
       originRequest:
         noTLSVerify: true
