--- a/elk/ingress.yaml
+++ b/elk/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: elasitc-ingressroute
+  name: elastic-ingressroute
   namespace: elastic
 spec:
   entryPoints:
