--- a/elk/ingress.yaml
+++ b/elk/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: elastic
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
     - kind: Rule
       match: Host(`elastic.local.net`)
