--- a/elk/ingress.yaml
+++ b/elk/ingress.yaml
@@ -5,10 +5,12 @@ metadata:
   namespace: elastic
 spec:
   entryPoints:
-    - websecure
+    - web
   routes:
     - kind: Rule
       match: Host(`elastic.local.net`)
       services:
         - name: homelab-es-http
           port: 9200
+  tls:
+    secretName: homelab-es-http-certs-internal
