--- a/cloudflared/configmap.yaml
+++ b/cloudflared/configmap.yaml
@@ -28,6 +28,10 @@ data:
       service: https://kibana-kb-http.elastic:5601
       originRequest:
         noTLSVerify: true
+    - hostname: elastic.mvaldes.dev
+      service: https://homelab-es-http.elastic:9200
+      originRequest:
+        noTLSVerify: true
     - hostname: bots.mvaldes.dev
       service: http://twitch-svc.bots
     - service: http_status:404
