--- a/elk/elastic.yaml
+++ b/elk/elastic.yaml
@@ -11,7 +11,7 @@ spec:
         type: ClusterIP
     tls:
       selfSignedCertificate:
-        subjectAlternativeName:
+        subjectAltName:
           dns: elastic.mvaldes.dev
   nodeSets:
     - name: elastic
