--- a/home-assistant/service.yaml
+++ b/home-assistant/service.yaml
@@ -1,16 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: home-assistant-svc
-  namespace: home-assistant
+  name: hoa-svc
+  namespace: hoa
 spec:
   selector:
-    app: home-assistant
+    app: hoa
   type: ClusterIP
   ports:
-    - name: http
-      protocol: TCP
+    - protocol: TCP
       port: 80
       targetPort: 8123
----
-
