--- a/home-assistant/deployment.yaml
+++ b/home-assistant/deployment.yaml
@@ -38,7 +38,7 @@ spec:
       volumes:
         - name: config
           persistentVolumeClaim:
-            claimName: home-assistant-pvc
+            claimName: hoa-pvc
       restartPolicy: Always
 ---
 
