--- a/home-assistant/pvc.yaml
+++ b/home-assistant/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: hoa-pv
+  name: hoa-pvc
   namespace: hoa
 spec:
   storageClassName: nfs-k8s-keep
