reverting port in svc

--- a/cloudflared/configmap.yaml
+++ b/cloudflared/configmap.yaml
@@ -35,5 +35,5 @@ data:
     - hostname: bots.mvaldes.dev
       service: http://twitch-svc.bots
     - hostname: hoa.mvaldes.dev
-      service: http://hoa-svc.hoa:8123
+      service: http://hoa-svc.hoa
     - service: http_status:404
