--- a/grafana/grafana-cm.yaml
+++ b/grafana/grafana-cm.yaml
@@ -29,3 +29,7 @@ data:
     - marcusolsson-json-datasource
     - magnesium-wordcloud-panel
     - https://github.com/VictoriaMetrics/victorialogs-datasource/releases/download/v0.2.1/victorialogs-datasource-v0.2.1.zip;victorialogs-datasource
+
+    # For victoria logs
+    env:
+     GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: "victorialogs-datasource"
