--- a/grafana/grafana-cm.yaml
+++ b/grafana/grafana-cm.yaml
@@ -31,5 +31,6 @@ data:
     - https://github.com/VictoriaMetrics/victorialogs-datasource/releases/download/v0.2.1/victorialogs-datasource-v0.2.1.zip;victorialogs-datasource
 
     # For victoria logs
-    env:
-     GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: "victorialogs-datasource"
+    grafana.ini:
+      plugins:
+        allow_loading_unsigned_plugins: victorialogs-datasource
