fix: stupid flux

--- a/grafana/grafana-cm.yaml
+++ b/grafana/grafana-cm.yaml
@@ -30,7 +30,7 @@ data:
     - magnesium-wordcloud-panel
     - https://github.com/VictoriaMetrics/victorialogs-datasource/releases/download/v0.2.1/victorialogs-datasource-v0.2.1.zip;victorialogs-datasource
 
-    # For victoria logs
+    # For victoria-logs
     grafana.ini:
       plugins:
         allow_loading_unsigned_plugins: victorialogs-datasource
