--- a/db/postgresq.yaml
+++ b/db/postgresq.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:latest
+          image: postgres:16.4
           ports:
             - containerPort: 5432
               protocol: TCP
