wrong directive name

--- a/paperless/deployment.yaml
+++ b/paperless/deployment.yaml
@@ -38,7 +38,7 @@ spec:
               value: adming
             - name: PAPERLESS_DBPASS
               valueFrom:
-                secretRefKey:
+                secretKeyRef:
                   name: paperless-secret
                   key: password
           ports:
