--- a/paperless/deployment.yaml
+++ b/paperless/deployment.yaml
@@ -31,7 +31,7 @@ spec:
             - name: PAPERLESS_TIME_ZONE
               value: America/Los_Angeles
             - name: PAPERLESS_DBHOST
-              value: postgress-svc.db:5432
+              value: postgres-svc.db
             - name: PAPERLESS_DBNAME
               value: paperless
             - name: PAPERLESS_DBUSER
