--- a/paperless/deployment.yaml
+++ b/paperless/deployment.yaml
@@ -46,12 +46,15 @@ spec:
           ports:
             - containerPort: 80
           volumeMounts:
-            - name: paperless-pvc
+            - name: paperless-pvc-data
               mountPath: /usr/src/paperless/data
-            - name: paperless-pvc
+            - name: paperless-pvc-media
               mountPath: /usr/src/paperless/media
       volumes:
-        - name: paperless-pvc
+        - name: paperless-pvc-data
+          persistentVolumeClaim:
+            claimName: paperless-pvc
+        - name: paperless-pvc-media
           persistentVolumeClaim:
             claimName: paperless-pvc
       restartPolicy: Always
