--- a/paperless/pvc.yaml
+++ b/paperless/pvc.yaml
@@ -1,7 +1,20 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: paperless-pvc
+  name: paperless-pvc-media
+  namespace: paperless
+spec:
+  storageClassName: nfs-k8s-keep
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: paperless-pvc-data
   namespace: paperless
 spec:
   storageClassName: nfs-k8s-keep
