missing name field value

--- a/linkding/deployment.yaml
+++ b/linkding/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: linkding-deploy
     spec:
       containers:
-      - name: 
+      - name: linkding-deploy
         image:  sissbruecker/linkding:latest
         imagePullPolicy: 
         ports:
