--- a/glance/deployment.yaml
+++ b/glance/deployment.yaml
@@ -1,76 +1,37 @@
-# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myjob
-  namespace: default
+  name: glance-deploy
+  namespace: glance
   labels:
-    app: myjob
+    app: glance-deploy
 spec:
   selector:
     matchLabels:
-      app: myjob
+      app: glance-deploy
   replicas: 1
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
-      annotations:
-        kubectl.kubernetes.io/default-container:  myjob
       labels:
-        app: myjob
+        app: glance-deploy
     spec:
-      # initContainers:
-        # Init containers are exactly like regular containers, except:
-          # - Init containers always run to completion.
-          # - Each init container must complete successfully before the next one starts.
       containers:
-      - name: myjob
-        image: myjob:latest
-        imagePullPolicy: 
-        resources:
-          requests:
-            cpu: 100m
-            memory: 100Mi
-          limits:
-            cpu: 100m
-            memory: 100Mi
-        livenessProbe:
-          tcpSocket:
-            port: 80
-          initialDelaySeconds: 5
-          timeoutSeconds: 5
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /_status/healthz
-            port: 80
-          initialDelaySeconds: 5
-          timeoutSeconds: 2
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
-        env:
-        - name: DB_HOST
-          valueFrom:
-            configMapKeyRef:
-              name: myjob
-              key: DB_HOST
-        ports:
-        - containerPort: 80
-          name: myjob
-        volumeMounts:
-        - name: localtime
-          mountPath: /etc/localtime
+        - name: glance-deploy
+          image: glanceapp/glance
+          livenessProbe:
+            tcpSocket:
+              port: 8080
+          volumeMounts:
+            - name: glance-config
+              mountPath: /app/glance.yml
+              subPath: glance.yml
+          ports:
+            - containerPort: 8080
       volumes:
-        - name: localtime
-          hostPath:
-            path: /usr/share/zoneinfo/Asia/Taipei
+        - name: glance-config
+          configMap:
+            name: glance-config
+            items:
+              - key: glance.yml
+                path: glance.yml
       restartPolicy: Always
----
-
