--- a/glance/service.yaml
+++ b/glance/service.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myjob
-  namespace: default
+  name: glance-svc
+  namespace: glance
 spec:
   selector:
-    app: myjob
-  type: 
+    app: glance-deploy
+  type: ClusterIP
   ports:
-  - name: myjob
-    protocol: 
-    port: 80
-    targetPort: 5000
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
