--- a/home-assistant/deployment.yaml
+++ b/home-assistant/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: hoa
-          image: ghcr.io/home-assistant/home-assistant:stable
+          image: ghcr.io/home-assistant/home-assistant:2025.1
           imagePullPolicy: IfNotPresent
           livenessProbe:
             tcpSocket:
