--- a/victorialogs/service.yaml
+++ b/victorialogs/service.yaml
@@ -1,17 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: logs
   name: victorialogs-svc
-  namespace: victoria
 spec:
-  selector:
-    app: 
-  type: 
+  type: ClusterIP
+  clusterIP: None
   ports:
-  - name: 
-    protocol: 
-    port: 80
-    targetPort: 5000
-    nodePort: 30001
----
-
+    - name: http
+      port: 9428
+      protocol: TCP
+      targetPort: http
+  selector:
+    app: victorialogs-deploy
